--- a/app/src/components/LocationList.css
+++ b/app/src/components/LocationList.css
@@ -94,13 +94,13 @@ h2 {
 .location-item.selected.hovered {
   background-color: rgba(139, 0, 139, 0.5);
   box-shadow: inset 4px 0 0 white;
-  animation: none;
+  animation: none !important;
 }
 
 .location-item.related-selected.related-hovered {
   background-color: rgba(139, 0, 139, 0.3);
   box-shadow: inset 3px 0 0 rgba(255, 255, 255, 0.9);
-  animation: list-pulse-light 1.5s infinite ease-in-out;
+  animation: none !important;
 }
 
 /* Play indicator */
